Fixed Facade to load users on init